Added push/pull functionality for reporting obejct
